--- a/DockerRaspberryPi/docker-compose.yml
+++ b/DockerRaspberryPi/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   influxdb:
     image: influxdb:1.7
+    restart: always
     container_name: influxdb
     volumes:
       - influxdb-data:/var/lib/influxdb
@@ -13,6 +14,7 @@ services:
   
   chronograf:
     image: chronograf:1.7
+    restart: always
     volumes:
       - chronograf-data:/var/lib/chronograf
     ports:
@@ -20,6 +22,7 @@ services:
       
   grafana:
     image: fg2it/grafana-armhf:v5.1.4
+    restart: always
     volumes:
       - grafana-data:/var/lib/grafana
     ports:
