Removed Batchpoints. Centralized configuration for plain InfluxDB and created a wrapper.

--- a/src/it/resources/application-test.properties
+++ b/src/it/resources/application-test.properties
@@ -1,3 +1,5 @@
 spring.influxdb.database=testsensordata
 spring.influxdb.url=http://localhost:8086
 spring.influx.url=http://localhost:8086
+
+influxdb.javaclient.database=testsensordata
