--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Sensitive data is stored in config/application.properties which isn't stored in Git.
+# It overwrites the empty values in this file.
+
 flora.bluetoothaddress=
 hygrothermograph.bluetoothaddress=
 
